# GPT-OSS-20b

./: README.md  pyproject.toml  requirements.txt
configs/: model_20b_reference.yaml  train_3xa100.yaml
docs/: BLOCKERS_ASSUMPTIONS.md  FEASIBILITY_3xA100.md  MILESTONES.md  TECHNICAL_PLAN.md  TRADEOFFS_3xA100.md  TUTORIAL_INFERENCE_LOGIC.md  TUTORIAL_TRAINING_LOGIC.md
scripts/: run_3xa100.sh
src/gpt_oss_20b/: checkpoint.py  config.py  data.py  dist.py  infer.py  model.py  parallel.py  profiler.py  tokenizer.py  train.py
tests/: test_checkpoint.py  test_config.py  test_data.py  test_model.py  test_parallel.py
